# KalshiEdge

./: .env.example  .gitignore  Claude.MD  Prd.MD  Skills.MD  pyproject.toml  run.sh
deploy/: install.sh  kalshiedge-dashboard.service  kalshiedge.service
scripts/: backtest.py  calibration_report.py  market_analysis.py
src/kalshiedge/: __init__.py  _observe.py  alerts.py  batch_forecaster.py  calendar.py  calibration.py  config.py  dashboard.py  debate.py  discovery.py  edge.py  forecaster.py  kalshi_client.py  main.py  momentum.py  portfolio.py  positions.py  prompts.py  quant.py  research.py  risk.py  strategies.py  trader.py  websocket.py
tests/: test_discovery.py  test_edge.py  test_forecaster.py  test_portfolio.py  test_positions.py  test_risk.py
